k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee-api
  labels:
    app: employee-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: employee-api
  template:
    metadata:
      labels:
        app: employee-api
    spec:
      containers:
        - name: employee-api
          image: himanshu085/employee-service:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /api/v1/employee/health
              port: 8080
            initialDelaySeconds: 8
            periodSeconds: 10
