k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
name: employee-api-svc
spec:
type: ClusterIP
selector:
app: employee-api
ports:
- port: 80
targetPort: 8080
